# json2ubl

./: .gitattributes  CHANGELOG.md  README.md  REFERENCE_tests.yml  conftest.py  generate_schema_examples.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
config/: ubl_converter.yaml
docs/: API.md
logs/: dir_permissions.json
schema_templates/: CreditNote_example.json  Invoice_example.json
src/: __init__.py
src/json2ubl/: __init__.py  batch_processor.py  benchmark.py  benchmark_examples.py  config.py  constants.py  converter.py  exceptions.py
src/json2ubl/core/: __init__.py  mapper.py  schema_builder.py  schema_cache_builder.py  schema_field_extractor.py  serializer.py  validator.py
src/json2ubl/models/: __init__.py  models.py
src/json2ubl/schemas/cache/: ApplicationResponse_schema_cache.json  AttachedDocument_schema_cache.json  AwardedNotification_schema_cache.json  BillOfLading_schema_cache.json  CallForTenders_schema_cache.json  CatalogueDeletion_schema_cache.json  CatalogueItemSpecificationUpdate_schema_cache.json  CataloguePricingUpdate_schema_cache.json  CatalogueRequest_schema_cache.json  Catalogue_schema_cache.json  CertificateOfOrigin_schema_cache.json  ContractAwardNotice_schema_cache.json  ContractNotice_schema_cache.json  CreditNote_schema_cache.json  DebitNote_schema_cache.json  DespatchAdvice_schema_cache.json  DocumentStatusRequest_schema_cache.json  DocumentStatus_schema_cache.json  ExceptionCriteria_schema_cache.json  ExceptionNotification_schema_cache.json  ForecastRevision_schema_cache.json  Forecast_schema_cache.json  ForwardingInstructions_schema_cache.json  FreightInvoice_schema_cache.json  FulfilmentCancellation_schema_cache.json  GoodsItemItinerary_schema_cache.json  GuaranteeCertificate_schema_cache.json  InstructionForReturns_schema_cache.json  InventoryReport_schema_cache.json  Invoice_schema_cache.json  ItemInformationRequest_schema_cache.json  OrderCancellation_schema_cache.json  OrderChange_schema_cache.json  OrderResponseSimple_schema_cache.json  OrderResponse_schema_cache.json  Order_schema_cache.json  PackingList_schema_cache.json  PriorInformationNotice_schema_cache.json  ProductActivity_schema_cache.json  Quotation_schema_cache.json  (+25 more)
test_files/: CreditNote.json  DebitNote.json  FreightInvoice.json  Invoice.json  Order.json  OrderCancellation.json  OrderChange.json  OrderResponse.json  OrderResponseSimple.json  SelfBilledCreditNote.json  SelfBilledInvoice.json  australian_tax_invoice.json  debit_note.json  freight_invoice.json  invoice_invalid_doctype.json  self_billed_credit_note.json  us_invoice.json
tests/: conftest.py  test_components.py  test_data_loss_detection.py  test_e2e.py  test_error_handling.py  test_integration.py  test_pipeline.py  test_ubl_document_types.py
tests/test_files/: batch_invoices.json  credit_note.json  invoice.json  invoice_missing_doctype.json  self_billed_invoice.json
